--- a/eleanoroft-style021526.css
+++ b/eleanoroft-style021526.css
@@ -144,16 +144,12 @@ height=site-footer;
 	width: 100vw;
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
-	max-height: 100px;
-	overflow: hidden;
 }
 .site-nav .nav-inner {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	box-sizing: border-box;
-	max-height: 100px;
-	padding: 2px 1.5rem;
+	padding: 1rem 1.5rem;
 	max-width: 1200px;
 	margin: 0 auto;
 }
@@ -1754,7 +1750,7 @@ FONT-SIZE: 12px; FONT-WEIGHT: BOLD; FONT-FAMILY: Verdana,Arial,Helvetica,Sans Se
 }
 
 .case-tags {
-  margin-bottom: 2px; /* Was 16px. Changed on 2/16/26 to 2px to reduce space below bottom of box below link */ 
+  margin-bottom: 16px;
 }
 
 
@@ -1771,7 +1767,7 @@ FONT-SIZE: 12px; FONT-WEIGHT: BOLD; FONT-FAMILY: Verdana,Arial,Helvetica,Sans Se
   display: inline-block;
   border: 2px solid #DADADA;
   align: left;
-  padding: 2px 8px; /* 2nd number is Left & Right padding */
+  padding: 2px 8px;
   margin: 2px;
   /*  */
   font-size: .9rem;
@@ -1841,13 +1837,12 @@ FONT-SIZE: 12px; FONT-WEIGHT: BOLD; FONT-FAMILY: Verdana,Arial,Helvetica,Sans Se
 }
 
 
-/* ------------------------------------------------- */
-/* Legislation Related css-styling. legislation.html */
-/* Also used with aroundtheworld.html */
-/* ------------------------------------------------- */
+/* ------------------------------------------------ */
+/* Legislative Relate css-styling. */
+/* ------------------------------------------------ */
 
 
-/* Legislation Paragraphs */
+/* Legislative Paragraphs */
 .leg-paragraph-left {
 text-align: left;
 text-align: justify;
@@ -1856,31 +1851,13 @@ text-align: justify;
 text-align: center;
 
 }
-/* Legislation Paragraph */
-
-
-/* Legislation Call To Action Box Paragraph with Drop Shadow Outline */
-#outer-block-with-shadow3 {
-border: 1px solid #2f6f3e;
-row-gap: 1.6em;
-display: grid;
-column-gap: 2em;
-}
-.green-shadow-box {
-    background: #ffffff; 
-    border-radius: 0;
-    padding: 24px 28px;
-    box-shadow: 3px 3px 0 #f5e4ec, 6px 6px 0 #E9A7D6;
-    border: 1px solid #dbeee2;
-}
-/* Legislation Call To Action Box Paragraph with Drop Shadow Outline */
-
+/* Legislative Paragraph */
 
 
 /* Legislative Links */
 /* Link used in legislative */ /* No margin or padding */
 .legislative-link {
-  margin-bottom: 2px; /* Was 16px. Changed on 2/16/26 to 2px to reduce space below bottom of box below link */ 
+  margin-bottom: 16px;
 }
 
 .legislative-link span {
@@ -1891,7 +1868,7 @@ column-gap: 2em;
   align: left;
   align-items: center;
   text-align: center;
-  padding: 2px 8px; /* first number expands top&bottom. 2nd number expands left&right */
+  padding: 2px 2px; /* first number expands top/bottom. 2nd number expands left/right */
   margin: 0px;
   /*  */
   font-size: .9rem;
@@ -1915,22 +1892,6 @@ column-gap: 2em;
   line-height: 10px;
 /*  line-height: 120%;  */
 }
-
-/* Reference Heading Of Legislative Link in STORY Paragraph */
-
-/* begin inline link menu */
-DIV#leg-link-heading span {
-	PADDING-LEFT: 4px; PADDING-RIGHT: 4px; PADDING-BOTTOM: 2px; PADDING-TOP: 4px; MARGIN: 0px auto; POSITION: relative; TEXT-ALIGN: center;
-}
-/* Removed/Changed: LETTER-SPACING: 0.1em; */
-DIV#leg-link-heading span {
-	DISPLAY: inline; FONT-SIZE: 12px; FONT-WEIGHT: BOLD; FONT-FAMILY: Verdana, Helvetica; LIST-STYLE-TYPE: none; LETTER-SPACING: 1px; BACKGROUND-COLOR: #f5e4ec;
-}
-/* end inline link menu */
-/* Reference Heading Of Legislative Link in STORY Paragraph */
-
-
-
 
 
 .midframelink {
@@ -2342,7 +2303,7 @@ max-width: 100%;
 	width: 100vw;
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
-	padding-bottom: 5px; /* was 2 rem Which Was too much footer */
+	padding-bottom: 2rem;
 }
 /* By me on 012226 */
 .footer-full-bleed-for-copyright {
